manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-ui
spec:
  selector:
    app: todo-ui
  ports:
  - port: 80
    targetPort: 80
