manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ui-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: ui.devsecopsguide.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todo-ui
            port:
              number: 80
